# elf2flash

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: publish.yml  test.yml
crates/elf2flash/: Cargo.toml
crates/elf2flash-core/: Cargo.toml
crates/elf2flash-core/src/: address_range.rs  elf.rs  lib.rs  uf2.rs
crates/elf2flash-core/src/boards/: circuit_playground_bluefruit.rs  mod.rs  rp2040.rs  rp2350.rs
crates/elf2flash/src/: main.rs  progress_bar.rs
crates/elf2flash/src/commands/: convert.rs  mod.rs
crates/elf2flash/src/commands/deploy/: mod.rs  to_usb.rs
crates/usbh-fatfs/: Cargo.toml  README.md
crates/usbh-fatfs/examples/list/: Cargo.toml
crates/usbh-fatfs/examples/list/src/: main.rs
crates/usbh-fatfs/src/: lib.rs
crates/usbh-scsi/: Cargo.toml  README.md
crates/usbh-scsi/examples/commands/: Cargo.toml
crates/usbh-scsi/examples/commands/src/: main.rs
crates/usbh-scsi/src/: lib.rs
crates/usbh-scsi/src/commands/: cbw.rs  inquiry.rs  mod.rs  read10.rs  read_capacity.rs  write10.rs
crates/usbh-scsi/src/storage/: block_device.rs  mod.rs
