[package]
name = "elf2flash"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository = "https://github.com/BjornTheProgrammer/elf2flash/tree/main/crates/elf2flash"
categories = ["command-line-utilities", "embedded"]
description = "A tool to help flash elf2 files to the pico"
keywords = ["rp2040", "pico", "elf2uf2", "elf2uf2-rs", "rp2350"]
documentation = "https://docs.rs/elf2flash"

[dependencies]
elf2flash-core = { version="0.0.1", path = "../elf2flash-core" }
clap = { version = "4", features = ["derive"] }
pbr = "1"
serialport = { version = "4", optional = true }
ctrlc = "3.4"
sysinfo = "0.32"
log = { workspace = true }
env_logger = "0.11"

[features]
default = ["serial"]
serial = ["serialport"]
