[package]
name = "usbh-fatfs"
version.workspace = true
edition.workspace = true
license.workspace = true
readme = "./README.md"
repository = "https://github.com/BjornTheProgrammer/elf2flash/tree/main/crates/usbh-fatfs"
categories = ["embedded", "hardware-support"]
description = "A library to communicate with fatfs usb devices from a host, no mounting necessary"
keywords = ["usb", "scsi", "fat", "fatfs"]
documentation = "https://docs.rs/usbh-fatfs"

[dependencies]
fatfs = { version = "0.3" }
log = { workspace = true }
bootsector = { version = "0.2" }
thiserror = { workspace = true }
usbh-scsi = { version = "0.1.0", path = "../usbh-scsi" }
rusb = { workspace = true }
